yamls/ap-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: apbackend
  name: apbackend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apbackend
  template:
    metadata:
      labels:
        app: apbackend
    spec:
      volumes:
      - name: secret-volume
        secret:
          secretName: supersecret
      - name: image-storage
        gcePersistentDisk:
          pdName: gke-cluster-1-f3023a97-pvc-8c113217-3559-11e8-885c-42010a80006c
      containers:
      - image: index.docker.io/fayder/apbackend:1.0
        imagePullPolicy: Always
        name: apbackend
        ports:
        - containerPort: 8085
        volumeMounts:
        - mountPath: /etc/nginx/ssl
          name: secret-volume
        - mountPath: /var/lib/uploaded_images
          name: image-storage
