yamls/mysql-client.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysql-client
spec:
  selector:
    matchLabels:
      app: mysql-client
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-client
    spec:
      containers:
      - image: mysql:5.6
        name: mysql-client
