yamls/mysql-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mysql-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/add-base-url: /
spec:
  tls:
  - secretName: nginxsecret
  backend:
    serviceName: mysql
    servicePort: 3306
